2008-02-17  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildBootVariablesId): Remove unused
	CVS based variables.

2008-02-16  Jari Aalto  <jari.aalto@cante.net>

	* etc/etc/programs.conf: Replace EGREPP with EGREP.

	* bin/cygbuild.pl: (HELP::Patch management commands::patch):
	Document new behavior that patches are searches recursively.
	Mention about the use of sequential number in patch filenames.

	* bin/cygbuild.sh:
	-- Replace all EGREPP with EGREP.
	(CygbuildPatchList): New. Find any *patch
	recursively.
	(CygbuildPatchApplyMaybe): Use `CygbuildPatchList'.
	(CygbuildInstallFixEtcdirInstall): Ignore cd call error.
	(CygbuildPatchApplyRun): Display patch name always.
	(CygbuildCmdInstallCheckCygpatchDirectory): Loose dot from file
	extension check so that *patch matches both .dpatch and .patch.
	(CygbuildCmdInstallCheckDirStructure): Fix empty dir check.
	(CygbuildCmdInstallCheckDocdir): Warn about missing doc/PKG dir.
	(CygbuildInstallPackageDocs): Add files: Copyright, Install
	(CygbuildBootVariablesGlobalMain): Remove 'debian' from
	variable `cygbuild_opt_exclude_dir'.
	(CygbuildCmdInstallCheckDocdir): Correct typo in find command
	that cause error: -type: command not found
	(CygbuildCmdInstallCheckLineEndings): Ignore error after head(1).
	(CygbuildCmdInstallCheckSetupHintFieldNames): Renamed. Was
	`CygbuildCmdInstallCheckSetupHintFields'.
	(CygbuildBootVariablesGlobalMain): New variable
	`CYGBUILD_SETUP_HINT_CATEGORY'.
	(CygbuildCmdInstallCheckSetupHintFieldCategory): New.
	(CygbuildCmdInstallCheckSetupHintMain): Use
	`CygbuildCmdInstallCheckSetupHintFieldCategory'.
	(CygbuildCmdReadmeFixMain): Check missing archive and suggest
	running command `package'.
	(CygbuildPatchListDisplay): Fix displayed names.
	(CygbuildPatchCheck): Display files first, then directories.
	(CygbuildPatchList): Sort the patches. Ignore version controlled
	directories.

2008-02-15  Jari Aalto  <jari.aalto@cante.net>
